--- a/src/app/shared/components/single-project/single-project.component.scss
+++ b/src/app/shared/components/single-project/single-project.component.scss
@@ -924,10 +924,11 @@
                 }
 
                 .sub-head-description{
-                    width: 70% !important;
+                    width: 100% !important;
+                    padding: 0px 30px !important;
 
                     @media (max-width: 450px) {
-                        width: 100% !important;
+                        padding: 0px 10px !important;
                     }
                 }
 
