--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -261,6 +261,10 @@ $active_background: #184d47;
                 height: 20px;
             }
         }
+
+        &:hover{
+            background: #FD4965
+        }
     }
     &__profile{
        
