--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -358,16 +358,11 @@
                                 {{ 'home.Featured Units.title' | translate}}
                                 <span></span>
                             </h2>
-                            <p class="description">
-                                VIt is a long established fact that a reader will be distracted by the<br> readable content of a
-                                page
-                                when looking at its layout
-                            </p>
                         </div>
                         
                         <div class="row mt-3 results" >
                             <div *ngFor="let item of recentlyAdded" class="col-xs-12 col-sm-6 col-xl-4 hover">
-                                {{ print(item) }}
+                                <!-- {{ print(item) }} -->
                                 <div class="card mb-3">
                                     <div class="row g-0 card-content">
                                         <div class="col-12" style="position: relative;">
@@ -739,7 +734,7 @@
                         
                         <div class="row mt-3 results" >
                             <div *ngFor="let item of recentlyAdded" class="col-xs-12 col-sm-6 col-xl-4 hover">
-                                {{ print(item) }}
+                                <!-- {{ print(item) }} -->
                                 <div class="card mb-3">
                                     <div class="row g-0 card-content">
                                         <div class="col-12" style="position: relative;">
