--- a/src/app/shared/components/add-project/add-project.component.html
+++ b/src/app/shared/components/add-project/add-project.component.html
@@ -77,9 +77,10 @@
 
                           <div class="each-input description">
                               <label for="validationCustom01" class="form-label">{{'signIn.Description' | translate}}</label>
-                              <textarea style="height: 100px;" formControlName="description" type="text" class="form-control" id="description"
-                                  aria-describedby="inputGroupPrepend" placeholder="{{'signIn.Description' | translate}}">
-                              </textarea>
+
+                              <angular-editor formControlName="description" class="form-control" id="description"
+                              aria-describedby="inputGroupPrepend" [config]="config"></angular-editor>
+
                           </div>
 
                           <div class="each-input upload">
