--- a/src/app/shared/components/login-developer/login-developer.component.html
+++ b/src/app/shared/components/login-developer/login-developer.component.html
@@ -142,9 +142,11 @@
                                             </div>
                                             <div class="each-input description">
                                                 <label for="validationCustom01" class="form-label">{{'signIn.Description' | translate}}</label>
-                                                <textarea style="height: 80px;" formControlName="description" type="text" class="form-control" id="description"
-                                                    aria-describedby="inputGroupPrepend" placeholder="{{'signIn.Description' | translate}}">
-                                                </textarea>
+                                                
+                                                <angular-editor  formControlName="description" class="form-control" id="description"
+                                                 aria-describedby="inputGroupPrepend" [config]="config"></angular-editor>
+
+                                                
                                             </div>
 
                                           </div>
