--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -30,7 +30,7 @@
             justify-content: center;
 
             @media (max-width: 450px) {
-                margin-top: -240px;
+                margin-top: -285px;
                 height: 360px;
             }
             
@@ -90,8 +90,8 @@
 
             .other-options{
                 width: 100%;
-                padding: 30px 0px;
-                background: white;
+                padding: 60px 0 30px 0px;
+                background: linear-gradient(transparent 0%, #c8c8c8 35%, white 50%);
                 position: absolute;
                 bottom: 0px; 
                 display: flex;
@@ -99,7 +99,8 @@
                 align-items: center;
 
                 @media (max-width: 450px) {
-                    padding: 10px 0px;
+                    padding: 30px 0 5px 0px;
+                    background: linear-gradient(transparent 0%, #c8c8c8 30% ,white 50%);
                 }
 
                 .each-option{
@@ -406,7 +407,7 @@
             background-size: contain;
             @media (max-width: 450px) {
                 background-size: cover;
-                min-height: 240px;
+                min-height: 300px;
                 filter: brightness(0.6);
             }
             .overlay {
@@ -2455,7 +2456,7 @@
 
     .top-projects{
         padding: 50px 135px;
-        background-color: #f7f7f7;
+        background: linear-gradient(180deg, white 0%, #f7f7f7 10%);
 
         @media (max-width: 450px) {
             padding: 25px 0px;
